# chat-app

./: CMakeLists.txt  README.md  imgui-cmake
client-src/: CMakeLists.txt  controller.cpp  controller.hpp  main.cpp  model.cpp  model.hpp  view-boilerplate.cpp  view.cpp  view.hpp
commmon-src/: common_lib.cpp  common_lib.hpp
common-src/: CMakeLists.txt
server-src/: CMakeLists.txt  main.cpp  tcp_connection.cpp  tcp_connection.hpp  tcp_server.cpp  tcp_server.hpp
